# protei_tasks

./: .gitignore  CMakeLists.txt
include/: app_settings.hpp  menu.hpp  readargs.hpp  vec.hpp
src/: app_settings.cpp  main.cpp  readargs.cpp
test/: main.cpp
